# analise-modalagem-churn_empresa_telecomunica-es

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: c0.1-vj-data-description.ipynb  c0.2-vj-feature-engineering.ipynb  c0.3-vj-filragem-variveis.ipynb  c0.4-vj-analise-visualizacao.ipynb
