[tool.poetry]
name = "'projeto-churn'"
version = "1"
description = "Analise, /modelagem e Treinamento de Maquina para sanar churn de uma empresa de Telecomunicações"
authors = ["Valmir Junior <valmirmoreirajunior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
inflection = "^0.5.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
plotly = "^5.22.0"
scipy = "^1.9.0"
scikit-learn = "^1.1.3"




[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
